--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "build": "tsc",
         "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
         "lint": "tslint -p tsconfig.json",
-        "prepare": "npm run build",
+        "prepare": "npm test && npm run build",
         "prepublishOnly": "npm test && npm run lint",
         "preversion": "npm run lint",
         "version": "npm run format && git add -A src",
@@ -31,11 +31,10 @@
     ],
     "author": "Hans Ole Gjerdrum, Robin Pedersen",
     "license": "MIT",
-    "dependencies": {
-        "array.defined": "^2.4.0",
-        "rxjs": "^6.4.0"
-    },
+    "dependencies": {},
     "devDependencies": {
+        "array.defined": "^2.4.0",
+        "rxjs": "^6.4.0",
         "@types/jasmine": "^3.3.9",
         "@types/node": "^11.11.1",
         "awesome-typescript-loader": "^5.2.1",
