Developed tests to explain it all better

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
         "lib/**/*"
     ],
     "scripts": {
-        "test": "karma start  karma.conf.js --single-run",
-        "test:watch": "karma start  karma.conf.js --browsers=Chrome",
+        "test": "npm run lint && karma start  karma.conf.js --single-run",
+        "test:watch": "karma start  karma.conf.js ",
+        "test:watch:debug": "npm run test:watch -- --browsers=Chrome",
         "build": "tsc",
-        "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "lint": "tslint -p tsconfig.json",
         "prepare": "npm test && npm run build",
         "prepublishOnly": "npm test && npm run lint",
@@ -25,18 +26,21 @@
     },
     "keywords": [
         "rxjs",
+        "jasmine",
         "spy",
         "ts",
         "subscription"
     ],
-    "author": "Hans Ole Gjerdrum, Robin Pedersen",
+    "author": "Hans Ole Gjerdrum <hansogj@gmail.com>",
+    "contributors": [
+        "Robin Pedersen <robinnibor94@gmail.com>"
+    ],
     "license": "MIT",
     "dependencies": {},
     "devDependencies": {
-        "array.defined": "^2.4.0",
-        "rxjs": "^6.4.0",
         "@types/jasmine": "^3.3.9",
         "@types/node": "^11.11.1",
+        "array.defined": "^2.4.0",
         "awesome-typescript-loader": "^5.2.1",
         "browserify": "^16.2.3",
         "jasmine-core": "^3.3.0",
@@ -47,6 +51,7 @@
         "karma-jasmine": "^2.0.1",
         "karma-typescript": "^4.0.0",
         "prettier": "^1.16.4",
+        "rxjs": "^6.4.0",
         "ts": "^0.2.2",
         "tslint": "^5.14.0",
         "tslint-config-prettier": "^1.18.0",
