--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "/media/hog001/lookingglas/git/spy-util.git"
+    "url": "https://github.com/hansogj/spy-util.git"
   },
   "keywords": [
     "rxjs",
