--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-jasmine": "^2.0.1",
-    "karma-typescript": "^4.0.0",
+    "karma-typescript": "^4.1.0",
     "prettier": "^1.16.4",
+    "rxjs": "^6.4.0",
     "ts": "^0.2.2",
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3333",
-    "rxjs": "^6.4.0"
+    "typescript": "^3.3.3333"
   }
 }
