--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rx-spy-util",
-  "version": "1.1.1",
+  "version": "1.1.2-0",
   "description": "Spyutils to subscribeables spies",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
