--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "ts": "^0.2.2",
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "set-value": ">=2.0.1",
+    "mixin-deep": ">=1.3.2",
+    "lodash": ">=4.17.12"
   }
 }
